2007-11-11  chryjs  <chryjs!@!free!.!fr>

 * L'utilisation de CFG n'est plus obligatoire
 * Ajout de l'affichage de la log du spam + corrections cosmetiques
 * Controle de l'insertion de mot de spam (pas de doublons)
 * Supprimer n'est pas bienvenue dans la gestion des categories et forums
 * forum_insert : ajout filtre mots clés retenus lors de l'enreg (passage en gras spip {{ }} )
 * Ajout ban list et filtrage à l'inscription

2007-11-11  chryjs  <chryjs!@!free!.!fr>

 * inc/spipbb_192 oubli de parenthèses, bug : http://www.spip-contrib.net/Plugin-SpipBB#forum400092
 * correction erreur ORDER BY doit etre un array (surtout en 192)
 * meilleure presentation de menu admin
 * Retour en arriere sur le fichier plugin.xml et spipbb_pipelines pour remettres les boutons qui n'etaient plus visibles en 192
 * Passage en 0.2.5
 
2007-11-10  chryjs  <chryjs!@!free!.!fr>

 * Anti Spam : ajout de l'import d'un CSV avec une liste de mots
 * Admin info : Presentation et traduction [fr] [en]
 * Admin config : Presentation et traduction [fr] [en] correction des actions
 * Admin Correction de la presentation + bug select id_rubrique + actions / exec
 * inc/forum_insert doit inclure inc/spipbb pour la compatibilite 192 voir : http://www.spip-contrib.net/Plugin-SpipBB#forum400088


2007-11-09  chryjs  <chryjs!@!free!.!fr>

 * admin : Gestion des messages de spam, ajout de la gestion de mot, envoyer un message, logger etc


2007-11-08  chryjs  <chryjs!@!free!.!fr>

 * Correction de la librairie de compatibilite, mauvaise adaptation du code de sql_fetch et de spip_mysql_explain donc bug !
 * Correction des credits (remarques sur la liste), renvoi vers la documentation http://www.spip-contrib.net/Plugin-SpipBB#contributeurs
 * Correction mots cles annonce postit et ferme dans modeles/spipbb_liste_sujets et filforum, il reste un "soucis" postit et annonce ne peuvent s'appliquer qu'au message principal du thread et on ne peut pas appliquer fermé n'importe comment