@@ -1,3 +1,7 @@
+2007-11-12  chryjs  <chryjs!@!free!.!fr>
+
+ * spipbb_pipelines : appel a inc/spipbb pour la compatibilite necessaire 192 a cause de sql_fetsel bug report X. Burot (email)
+
 2007-11-11  chryjs  <chryjs!@!free!.!fr>
 
  * L'utilisation de CFG n'est plus obligatoire
